--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "socket.io-client": "^2.3.0"
   },
   "scripts": {
-    "start": "react-scripts build && node index.js",
+    "start": "react-scripts build && nodemon index.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
